--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <!---------------- loding ----------------->
-    <div class="loding" style="display : none">
+    <div class="loding">
         <div class="lds-ripple"><div></div><div></div></div>
     </div>
     <!---------------X-------------X-------------->
