--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wow | Persone Template</title>
     <!-- link normaliz -->
@@ -47,7 +46,7 @@
     </div>
     <div class="skin-content">
         <ul>
-            <i class="fa fa-times skin-btn-close"></i>
+            <li><i class="fa fa-times skin-btn-close"></i></li>
             <li data-color="red"><i class="fas fa-tint"></i></li>
             <li data-color="blue"><i class="fas fa-tint"></i></li>
             <li data-color="green"><i class="fas fa-tint"></i></li>
@@ -112,7 +111,7 @@
                             <h2 class="home-info-name font-weight-bold"><span class="skin-color">frindi</span> mohamed</h2>
                             <h4 class="home-info-per font-weight-bolder">I'm a : <span class="typed"></span></h4>
                             <p class="home-info-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores magni, adipisci iste praesentium assumenda cupiditate vitae recusandae necessitatibus ad iure odio aliquid!</p>
-                            <button class="btn btn-about magic-hover magic-hover__square"><a href="#about">more about</a></button>
+                            <a href="#about" class="btn btn-about magic-hover magic-hover__square">more about</a>
                     </div>
                 
                 </div>
@@ -133,7 +132,7 @@
                         <span class="about-item-title">Mohamed <span>Frindi</span></span>
                         <span class="about-item-info">I'm : <span>Front-End Developere</span></span>
                         <p class="about-item-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente esse, sequi hic a in magnam nesciunt quis error itaque natus voluptate? Dicta laudantium assumenda voluptas tempora corporis totam quia minus!</p>
-                        <button class="btn magic-hover magic-hover__square"><a href="#">download cv</a></button>
+                        <a href="#" class="btn magic-hover magic-hover__square">download cv</a>
                     </div>
                     <div class="about-item col-lg-5 magic-hover magic-hover__square">
                         <img src="img/about.jpg" alt="about" class="img-fluid img-thumbnail">
@@ -183,7 +182,7 @@
                 <h3><span class="magic-hover magic-hover__square">me</span> skils</h3>
             </div>
 
-            <dir class="skils">
+            <div class="skils">
                 <div class="container">
                     <div class="row">
 
@@ -243,7 +242,7 @@
 
                     </div>
                 </div>
-            </dir>
+            </div>
 
         </div>
         <!-----------X---------------X-------------->
